# jfscripts

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  README_header.rst  README_template.rst  _generate_doc.py  csv_to_yaml.py  description  pdf_replace_page_with_image.py  pick-test.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
doc/source/: cli.rst  command-line-interface.rst  conf.py  index.rst  jfscripts.rst  modules.rst
docs/: cli.rst  conf.py  index.rst  jfscripts.rst  modules.rst  requirements.txt
jfscripts/: __init__.py  _utils.py  _version.py  capturing.py  csv_to_yaml.py  dns_ipv6_prefix.py  extract_pdftext.py  find-duplicate-files-by-size-only.py  find_dupes_by_fuzzy.py  find_dupes_by_size.py  find_duplicates_by_size.py  get-ipv6-prefix.py  image_into_pdf.py  imagemagick_imslp.py  linklocal.py  list_files.py  mac_to_eui64.py  magick_imslp.py  pdf_compress.py  rename-school-folders.py  replace_pdfpage.py  utils.py
jfscripts/work_in_progress/: csv_to_yaml.py  find_dupes_by_fuzzy.py
test/: _helper.py  test_capturing.py  test_dns_ipv6_prefix.py  test_extract_pdftext.py  test_find_dupes_by_size.py  test_find_duplicates_by_size.py  test_image_into_pdf.py  test_imagemagick_imslp.py  test_list_files.py  test_mac_to_eui64.py  test_magick_imslp.py  test_pdf_compress.py  test_replace_pdfpage.py  test_utils.py
tests/: _helper.py  test_dns_ipv6_prefix.py  test_extract_pdftext.py  test_find_dupes_by_size.py  test_image_into_pdf.py  test_list_files.py  test_mac_to_eui64.py  test_pdf_compress.py  test_utils.py
