[tool.poetry]
name = "jfscripts"
version = "1.0.0"
description = "A collection of my Python scripts. Maybe they are useful for someone else."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Josef-Friedrich/python-scripts"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"

[tool.poetry.group.dev.dependencies]
readme-patcher = "^0.6.0"
stdout-stderr-capturing = "^0.2.0"

[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"dns-ipv6-prefix.py" = "jfscripts.dns_ipv6_prefix:main"
"extract-pdftext.py" = "jfscripts.extract_pdftext:main"
"find-dupes-by-size.py" = "jfscripts.find_dupes_by_size:main"
"list-files.py" = "jfscripts.list_files:main"
"mac-to-eui64.py" = "jfscripts.mac_to_eui64:main"
"pdf-compress.py" = "jfscripts.pdf_compress:main"
"image-into-pdf.py" = "jfscripts.image_into_pdf:main"
